--- a/IHCL/index.html
+++ b/IHCL/index.html
@@ -49,7 +49,9 @@ clevertap.privacy.push({useIP: false}); //set the flag to true, if the user agre
     "serviceWorkerPath": "./clevertap_sw.js" // path to your custom service worker file
   });
 </script>                                    
-   
+   <script type="text/javascript">
+  clevertap.event.push("Home page");
+</script>
     <!-- Tata digital platform library -->
 <!--<script src="https://accounts.tatadigital.com/tdl-sso.js" async defer></script>-->
 
