--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -14,7 +14,7 @@
 
 function ctget() {
 
-        const apiEndpoint = 'https://api.clevertap.com/1/profile.json?email=jidesh@clevertap.com';
+        const apiEndpoint = 'https://cors-anywhere.herokuapp.com/https://api.clevertap.com/1/profile.json?email=jidesh@clevertap.com';
 const headers = {
   'X-CleverTap-Account-Id': 'RZ7-K44-ZW7Z',
   'X-CleverTap-Passcode': 'EVQ-RAA-SSEL',
