--- a/en-in/booking-cart/index.html
+++ b/en-in/booking-cart/index.html
@@ -32,24 +32,51 @@
   
 }
 </style>
+                               <script type="text/javascript">
+     var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[], privacy:[]};
+ // replace with the CLEVERTAP_ACCOUNT_ID with the actual ACCOUNT ID value from your Dashboard -> Settings page
+clevertap.account.push({"id": "RZ7-K44-ZW7Z"});
+clevertap.privacy.push({optOut: false}); //set the flag to true, if the user of the device opts out of sharing their data
+clevertap.privacy.push({useIP: true}); //set the flag to true, if the user agrees to share their IP data
+ (function () {
+         var wzrk = document.createElement('script');
+         wzrk.type = 'text/javascript';
+         wzrk.async = true;
+         wzrk.src = ('https:' == document.location.protocol ? 'https://d2r1yp2w7bby2u.cloudfront.net' : 'http://static.clevertap.com') + '/js/clevertap.min.js';
+         var s = document.getElementsByTagName('script')[0];
+         s.parentNode.insertBefore(wzrk, s);
+  })();
 
+
+  clevertap.notifications.push({
+    "titleText":"Would you like to receive Push Notifications?",
+    "bodyText":"We promise to only send you relevant content and give you updates on your transactions",
+    "okButtonText":"Sign me up!",
+    "rejectButtonText":"No thanks",
+    "okButtonColor":"#F28046",
+    "askAgainTimeInSeconds":5,
+    "serviceWorkerPath": "./clevertap_sw.js" // path to your custom service worker file
+  });
+</script>                                    
+<script type="text/javascript">
+  clevertap.event.push("Page Viewed", {
+  "URL":window.location.href
+
+});
+</script>
     <script>
 function success() {
   var x = document.getElementById("succ");
-  if (x.style.display === "none") {
+ 
     x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
+
 }
 
 function failed() {
   var x = document.getElementById("fail");
-  if (x.style.display === "none") {
+
     x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
+  
 }
 </script>
 
