--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@ clevertap.privacy.push({useIP: true}); //set the flag to true, if the user agree
   });
 </script>                                    
 <script type="text/javascript">
-  clevertap.event.push("Page Viewed", {
-  "URL":window.location.href
-
-});
+  clevertap.event.push("Home page");
 </script>
    
     <!-- Tata digital platform library -->
