--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -4,7 +4,7 @@
      
      var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[], region:'us1'};
  // replace with the CLEVERTAP_ACCOUNT_ID with the actual ACCOUNT ID value from your Dashboard -> Settings page
- clevertap.account.push({"id": "W8W-897-865Z"});
+ clevertap.account.push({"id": "W6Z-8RW-485Z"});
  (function () {
          var wzrk = document.createElement('script');
          wzrk.type = 'text/javascript';
